--- a/src/components/Post/styles.module.css
+++ b/src/components/Post/styles.module.css
@@ -108,8 +108,13 @@
   transition: background-color 0.1s;
 }
 
-.commentForm button:hover {
+.commentForm button:not(:disabled):hover {
   background: var(--green-300);
+}
+
+.commentForm button:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
 }
 
 .commentList {
